--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://https://peterquadrini.github.io/virtual-business-card-official",
+  "homepage": "https://peterquadrini.github.io/virtual-business-card-official/",
   "name": "virtual-business-card",
   "version": "0.1.0",
   "private": true,
